[package]
name = "corrode"
version = "0.1.0"
description = "Corrode is a terminal based weather app"
authors = ["Tom Louveau <chewie.louveau@gmail.com>"]
edition = "2024"

[dependencies]
color-eyre = "0.6"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
